SubBt/force-app/main/default/objects/Program__c/Program__c.object-meta.xml
<CustomObject>
    <label>Program</label>
    <nameField>
        <displayFormat>PG-{00000}</displayFormat>
        <label>PG #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>