SubBt/force-app/main/default/objects/Program__c/fields/Program_Details__c.field-meta.xml
<CustomField>
    <fullName>Program_Details__c</fullName>
    <label>Program Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>