SubBt/force-app/main/default/objects/Program__c/fields/Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Manager that is overseeing the Program.</inlineHelpText>
    <label>Program Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>