SubBt/force-app/main/default/objects/Program__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <inlineHelpText>Name of the Program.</inlineHelpText>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>